--- a/assets/css/mai-editor.css
+++ b/assets/css/mai-editor.css
@@ -1,10 +1,92 @@
 .button {
-	padding: 8px 20px;
-	text-decoration: none;
-	border: 1px solid #222;
+    padding: 8px 20px;
+    text-decoration: none;
+    border: 1px solid #222;
+}
+
+.entry {
+    padding: 24px;
+    margin-bottom: 30px;
+    border: 1px solid rgba(0, 0, 0, .06);
+}
+
+.image-bg {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .callout {}
+
+.overlay {
+    position: relative;
+}
+
+.overlay::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    -webkit-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    z-index: 0;
+}
+
+.overlay * {
+    position: relative;
+    z-index: 1;
+}
+
+.overlay.overlay-light::after {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.overlay.overlay-dark::after {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.overlay.overlay-gradient::after {
+    background-image: -webkit-gradient( linear, left top, left bottom, color-stop(25%, rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.6)) );
+    background-image: -webkit-linear-gradient( top, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.6) );
+    background-image: -o-linear-gradient( top, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.6) );
+    background-image: linear-gradient( to bottom, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0.6) );
+}
+
+a.overlay::after {
+    background-color: rgba(0, 0, 0, 0.25);
+}
+
+a.overlay:hover::after {
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.light-content,
+.light-content *:not(.button),
+.dark-content .light-content,
+.dark-content .light-content *:not(.button),
+.light-content .dark-content .light-content,
+.light-content .dark-content .light-content *:not(.button),
+.dark-content .dark-content .light-content,
+.dark-content .dark-content .light-content *:not(.button) {
+    color: #fff;
+    text-shadow: 0 0 6px rgba(0, 0, 0, 0.25);
+}
+
+.dark-content,
+.dark-content *:not(.button),
+.light-content .dark-content,
+.light-content .dark-content *:not(.button),
+.dark-content .light-content .dark-content,
+.dark-content .light-content .dark-content *:not(.button),
+.light-content .light-content .dark-content,
+.light-content .light-content .dark-content *:not(.button) {
+    color: #323232;
+    text-shadow: 0 0 6px rgba(255, 255, 255, 0.25);
+}
 
 /* Flexington 2.3.5 */
 .gallery,
